--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "joi": "^17.4.1",
     "mongoose": "^5.13.2",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.12",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6"
